# matrix_mixer

./: CMakeLists.txt  project.yml
inc/: main.h  matrix_mixer.h
src/: main.c  matrix_mixer.c
test/: test_matrix_mixer.c
